[gd_scene load_steps=2 format=3 uid="uid://blih3sad2222n"]

[ext_resource type="Script" uid="uid://dih7jluaupg8e" path="res://scripts/menus/CharacterSelect.gd" id="1_qfa42"]

[node name="CharacterSelect" type="Control"]
custom_minimum_size = Vector2(256, 360)
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_qfa42")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(0, 128)
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0

[node name="NameInput" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2

[node name="RaceSelectButton" type="OptionButton" parent="VBoxContainer"]
layout_mode = 2

[node name="ClassSelectButton" type="OptionButton" parent="VBoxContainer"]
layout_mode = 2
